<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contohTextBerita">Jakarta - Terdorong rasa penasaran yang meruah, Jaka Tarub membuka tutup periuk, melanggar amanah istrinya untuk menjaga periuk tetap tertutup. Maka terbukalah rahasia ketahanan pangan keluarga kecilnya. Rahasia mengapa padi di lumbungnya tak pernah berkurang: Nawangwulan, sang istri, hanya memasak sehelai padi untuk memperoleh seperiuk nasi.
</string>
    <string name="home">Home</string>
    <string name="food_fact">Food Fact</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <!--Fragment Names-->
    <string name="profile_fragment">Profile</string>

    <string name="app_name">Foodless</string>
    <string name="register">REGISTER</string>
    <string name="regis_donatur">REGISTER DONATUR</string>
    <string name="regis_komunitas">REGISTER COMMUNITY</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email"> Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="restaurant_name"> Restaurant Name</string>
    <string name="contact_person"> Contact Person Name</string>
    <string name="choose_regis">Choose <b>One</b></string>
    <string name="login">LOGIN</string>
    <string name="text_register">Dont have an account? Register <u> here</u> </string>
    <string name="nama">Nama Individu/Event</string>
    <string name="event">Event</string>
    <string name="individu">Individu</string>
    <string name="telepon">Telepon</string>
    <string name="jenis_makanan">Jenis Makanan</string>
    <string name="exindividu">Ex: Janu, RM Padang</string>
    <string name="error_input_nama">Please enter your name</string>
    <string name="error_input_namakom">Please enter your community name</string>
    <string name="error_input_jmlmember">Please enter the number of members</string>
    <string name="error_input_email">Please enter your e-mail</string>
    <string name="error_input_password">Please enter your password</string>
    <string name="error_input_phone">Please enter your phone number</string>
    <string name="error_input_address">Please enter your address</string>
    <string name="succeed_register">Successfully Registered</string>
    <string name="minimum_password">Password must be at least 8 characters long</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="keterangan">Keterangan</string>
    <string name="signout">Sign Out</string>
    <string name="submit">SUBMIT</string>
    <string name="title">Title</string>
    <string name="member">Member</string>
    <string name="description">Description</string>
    <string name="donate">Lets Donate</string>
    <string name="roleuser">Role</string>
    <string name="dbname_Users">users</string>
    <string name="logout">Sign Out</string>
    <string name="title_activity_detail_order">DetailOrder</string>
    <string name="donatur">Donatur</string>
    <string name="komunitas">Komunitas</string>

    <string name="nama_komunitas">Community Name</string>
    <string name="alamat">Alamat</string>
    <string name="notification">Notification</string>



    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>


</resources>
