<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.userProfile">

    <ImageView
        android:id="@+id/topBg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@+id/topBg"
        app:layout_constraintStart_toStartOf="@id/topBg"
        app:layout_constraintEnd_toEndOf="@id/topBg"
        app:layout_constraintBottom_toBottomOf="@id/topBg"
        android:src="@drawable/ic_profile"
        />


    <TextView
        android:id="@+id/emailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:layout_marginTop="40dp"
        android:fontFamily="@font/questrial"
        android:text="@string/email"
        android:textColor="@color/hitam"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBg" />

    <TextView
        android:id="@+id/txtEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:text="aaaaa"
        android:textColor="@color/hitam"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toEndOf="@+id/emailUser"
        app:layout_constraintTop_toBottomOf="@id/topBg" />

    <TextView
        android:id="@+id/passwordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/questrial"
        />

    <TextView
        android:id="@+id/phoneUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/questrial"
        />

    <TextView
        android:id="@+id/addressUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/address"
        android:textSize="20sp"
        android:textColor="@color/hitam"
        android:fontFamily="@font/questrial"
        />


    <Button
        android:id="@+id/btnSignOutUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lighterbgcolor"
        android:text="@string/signout"
        android:fontFamily="@font/questrial"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/addressUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        />

</android.support.constraint.ConstraintLayout>