<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.userProfile">

        <ImageView
            android:id="@+id/topBg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/gradient_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="@+id/topBg"
            app:layout_constraintStart_toStartOf="@id/topBg"
            app:layout_constraintEnd_toEndOf="@id/topBg"
            app:layout_constraintBottom_toBottomOf="@id/topBg"
            android:src="@drawable/ic_profile"
            />

    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/full_name"
        android:textColor="@color/hitam"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePic" />

    <TextView
        android:id="@+id/txtRoleUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roleuser"
        android:textSize="20sp"
        android:textColor="@color/hitam"
        app:layout_constraintTop_toBottomOf="@id/txtFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        />


        <TextView
            android:id="@+id/fullNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/questrial"
            android:text="@string/email"
            android:textColor="@color/hitam"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:textColor="@color/hitam"
            android:fontFamily="@font/questrial"
            />

        <TextView
            android:id="@+id/emailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fullNameProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:text="@string/email"

            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBg" />

        <TextView
            android:id="@+id/txtEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:id="@+id/phoneProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="96dp"
            android:text="aaaaa"
            android:textColor="@color/hitam"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toEndOf="@+id/emailUser"
            app:layout_constraintTop_toBottomOf="@id/topBg" />

    <TextView
        android:id="@+id/passwordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/questrial"
        android:text="@string/password"
        android:textColor="@color/hitam"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailUser" />

    <TextView
        android:id="@+id/txtPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        app:layout_constraintStart_toEndOf="@+id/passwordUser"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailUser"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="44dp"
        android:textSize="20sp"
        android:textColor="@color/hitam"
      />

    <TextView
        android:id="@+id/phoneUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/questrial"
        android:text="@string/phone_number"
        android:textColor="@color/hitam"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordUser" />


    <TextView
        android:id="@+id/txtPhoneUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordUser"
        app:layout_constraintStart_toEndOf="@id/phoneUser"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textColor="@color/hitam"
        android:text="Phone Number"
        />


    <TextView
        android:id="@+id/addressUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/questrial"
        android:text="@string/address"
        android:textColor="@color/hitam"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneUser" />

    <TextView
        android:id="@+id/txtAddressUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPhoneUser"
        app:layout_constraintStart_toEndOf="@id/addressUser"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="44dp"
        android:textSize="20sp"
        android:textColor="@color/hitam"
        android:text="Address"
        />

        <Button
            android:id="@+id/btnSignOutUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lighterbgcolor"
            android:text="@string/signout"
            android:fontFamily="@font/questrial"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/addressUser"
        <TextView
            android:id="@+id/addressProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp"
            />

        <TextView
            android:id="@+id/text_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/questrial"
            android:text="@string/logout"
            android:textColor="@color/hitam"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressProfile" />
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/profileProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--&lt;!&ndash;<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--tools:context=".Fragment.ProfileFragment">-->

    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;&ndash;&gt;-->
    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="Profile fragment" />-->
<!--
</FrameLayout>-->
