<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity.Register"
    android:theme="@style/FormLayout"
    android:background="@color/putih">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/questrial"
                android:text="@string/register"
                android:textColor="@color/bgcolor"
                android:textSize="32sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/image1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/full_name">

                <EditText
                    android:id="@+id/edit_nama_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/questrial"
                    android:inputType="text"
                    android:textColor="@color/bgcolor"
                    android:textColorHint="@color/bgcolor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/address">

                <EditText
                    android:id="@+id/edit_alamat_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/questrial"
                    android:inputType="textMultiLine"
                    android:textColor="@color/bgcolor"
                    android:textColorHint="@color/bgcolor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/phone_number">

                <EditText
                    android:id="@+id/edit_notelp_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/questrial"
                    android:inputType="phone"
                    android:textColor="@color/bgcolor"
                    android:textColorHint="@color/bgcolor" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/edit_email_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/questrial"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/bgcolor"
                    android:textColorHint="@color/bgcolor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bgcolor"
                android:hint="@string/password">

                <EditText
                    android:id="@+id/edit_password_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/bgcolor"
                    android:inputType="textPassword"
                    android:textColor="@color/bgcolor"
                    android:fontFamily="@font/questrial"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/background_btn_rounded"
                android:text="@string/register"
                android:backgroundTint="@color/bgcolor"
                android:textColor="@color/putih"
                />

            <ProgressBar
                android:id="@+id/progress_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>