<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:theme="@style/FormLayout"
    tools:context=".Activity.Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="325dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/email">

            <EditText
                android:id="@+id/edit_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
               android:textColor="@color/bgcolor"
                android:textColorHint="@color/bgcolor"
                android:fontFamily="@font/questrial"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/bgcolor"
            android:hint="@string/password">

            <EditText
                android:id="@+id/edit_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bgcolor"
                android:inputType="textPassword"
                android:textColor="@color/bgcolor"
                android:fontFamily="@font/questrial"/>
        </android.support.design.widget.TextInputLayout>


        <View
            android:id="@+id/View1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="#DFDCDC" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_margin="10dp"
            android:textColor="@color/putih"
            android:fontFamily="@font/questrial"
            android:textSize="16sp"
            android:background="@drawable/background_btn_rounded"
            android:backgroundTint="@color/bgcolor"/>

        <Button
            android:id="@+id/buttonlog_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bgcolor"
            android:fontFamily="@font/questrial"
            android:textSize="16sp"
            android:background="@drawable/background_btn_rounded"/>

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>